# bike-risk-route-app

./: .gitignore  ARCHITECTURE.md
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: geocode.py  health.py  navigate.py
backend/app/services/: google_routes.py  graph_builder.py  path_planner.py  risk_engine.py  route_evaluator.py
backend/scripts/: build_graph.py  download_osmnx_taiwan.py  export_graph_gpkg.py  export_risk_layer.py  process_accidents.py  test_osmnx.py
docs/: discussion_backlog.md  risk_score_methodology.md
frontend/: .env.example  app.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
frontend/android/: settings.gradle
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/java/com/bikeriskroute/app/: MainActivity.kt  MainApplication.kt
frontend/android/app/src/main/res/values/: strings.xml
frontend/app/: _layout.tsx  index.tsx  map.tsx  map.web.tsx  nav_prototype.tsx
frontend/components/: RiskBadge.tsx  RouteCard.tsx  RouteList.tsx  SearchForm.tsx
frontend/hooks/: useMapRegion.ts  useNavigate.ts
frontend/ios/: Podfile
frontend/ios/BikeRiskRoute/: Info.plist
frontend/ios/BikeRiskRoute.xcodeproj/: project.pbxproj
frontend/ios/BikeRiskRoute.xcodeproj/xcshareddata/xcschemes/: BikeRiskRoute.xcscheme
frontend/services/: api.ts  geocoder.ts
frontend/types/: navigation.ts
