[project]
name = "bike-risk-backend"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.104,<1",
    "uvicorn[standard]>=0.24,<1",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "httpx>=0.25,<1",
    "geopandas>=0.14,<1",
    "momepy>=0.7,<1",
    "networkx>=3,<4",
    "pandas>=2,<3",
    "numpy>=1.26,<3",
    "shapely>=2,<3",
    "pyproj>=3.5,<4",
    "polyline>=2,<3",
    "scipy>=1.11,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
